@@ -41,6 +41,7 @@
 	* Changed the spellchecker configuration to build on commit instead of on optimize
 	* Disabled the configuration status report for now as it caused trouble with some installations
 	* Added an example solr.xml which defines cores for all available languages
+	* Fixed issue #8117: Changing a page to type Folder keeps it in Index Queue
 
 2012-02-13  Ingo Renner  <ingo.renner@dkd.de>
 
